Fix max-height cutting off the picture

--- a/client/app/projects/profile/profile.less
+++ b/client/app/projects/profile/profile.less
@@ -51,10 +51,6 @@
     background-color: #444;
 }
 
-.carousel {
-    max-height: 600px;
-}
-
 .project-image {
     padding-bottom: 50px;
 }
